--- a/locales/vi.json
+++ b/locales/vi.json
@@ -1,38 +1,92 @@
 {
   "main": {
-    "home": "Trang chủ",
-    "categories": "Danh mục",
-    "cart": "Giỏ hàng",
-    "profile": "Hồ sơ"
+    "home": "Trang Chủ",
+    "categories": "Danh Mục",
+    "cart": "Giỏ Hàng",
+    "profile": "Hồ Sơ"
   },
   "profile": {
-    "hello": "Xin Chào"
+    "change-language": "Tiếng Việt -> English",
+    "edit-profile": "Chỉnh Sửa Hồ Sơ",
+    "log-out": "Đăng Xuất",
+    "username": "Tên Đăng Nhập",
+    "first-name": "Tên",
+    "last-name": "Họ",
+    "email": "Email",
+    "address": "Địa Chỉ",
+    "phone-number": "Số Điện Thoại",
+    "change-password": "Đổi Mật Khẩu",
+    "current-password": "Mật Khẩu Hiện Tại",
+    "new-password": "Mật Khẩu Mới",
+    "retype-new-password": "Nhập Lại Mật Khẩu Mới",
+    "order-title": "Đơn Hàng"
   },
   "item_detail": {
     "buynow_button": "MUA NGAY",
-    "description": "Mô tả",
+    "description": "Mô Tả",
     "delivery_option": {
-      "free_delivery": "Vận chuyển miễn phí",
-      "premium_delivery": "Vận chuyển nhanh",
-      "cost_delivery": "Vận chuyển tính phí"
+      "free_delivery": "Miễn Phí Giao Hàng",
+      "premium_delivery": "Giao Hàng Cao Cấp",
+      "cost_delivery": "Giao Hàng Mất Phí"
     }
   },
   "messages": {
-    "add-to-cart": "Thêm vào giỏ hàng thành công",
-    "remove-from-cart": "Xóa khỏi giỏ hàng thành công",
-    "clear-cart": "Đã xóa tất cả sản phẩm",
-    "add-to-favorite": "Đã thêm vào danh sách yêu thích",
-    "remove-to-favorite": "Đã xóa khỏi danh sách yêu thích",
-    "clear-favorite": "Đã xóa toàn bộ danh sách yêu thích"
+    "add-to-cart": "Đã Thêm Vào Giỏ Hàng Thành Công",
+    "remove-from-cart": "Đã Xóa Khỏi Giỏ Hàng Thành Công",
+    "clear-cart": "Tất Cả Mặt Hàng Đã Được Xóa Khỏi Giỏ Hàng",
+    "add-to-favorite": "Đã Thêm Vào Danh Sách Yêu Thích",
+    "remove-from-favorite": "Đã Xóa Khỏi Danh Sách Yêu Thích",
+    "clear-favorite": "Tất Cả Mặt Hàng Đã Được Xóa Khỏi Danh Sách Yêu Thích"
   },
   "alert": {
-    "confirm": "Xác nhận",
+    "confirm": "Xác Nhận",
     "no": "Không",
     "yes": "Có",
-    "clear-cart": "Bạn có chắc muốn xóa tất cả sản phẩm trong giỏ hàng?"
+    "clear-cart": "Bạn Có Chắc Chắn Muốn Xóa Tất Cả Mặt Hàng Trong Giỏ Hàng?"
   },
   "cart": {
-    "clear-cart": "Xóa giỏ hàng",
-    "cart-empty-message": "Giỏ hàng của bạn đang trống. Hãy bắt đầu mua sắm!"
+    "clear-cart": "Xóa Giỏ Hàng",
+    "cart-empty-message": "Giỏ Hàng Của Bạn Trống. Hãy Bắt Đầu Mua Sắm!"
+  },
+  "button": {
+    "confirm": "Xác Nhận",
+    "reset-filter": "Đặt Lại Bộ Lọc"
+  },
+  "search": {
+    "search-placeholder": "Tìm Kiếm Mặt Hàng, Sản Phẩm,..."
+  },
+  "home": {
+    "check-out": "Xem Sản Phẩm Mới Nhất Của Chúng Tôi!",
+    "hot-deals": "Ưu Đãi Nóng 🔥",
+    "upcoming-event": "Sự Kiện Sắp Tới 🥇",
+    "new-arrival": "Sản Phẩm Mới 📦"
+  },
+  "categories": {
+    "hot-deals": "Ưu Đãi Nóng",
+    "upcoming-event": "Sự Kiện Sắp Tới",
+    "new-arrival": "Sản Phẩm Mới",
+    "sort-by-price": "Sắp Xếp Theo Giá",
+    "sort-by-price-ascending": "Giá Tăng Dần",
+    "sort-by-price-descending": "Giá Giảm Dần",
+    "filter": "Bộ Lọc",
+    "brand": "Thương Hiệu",
+    "price": "Giá",
+    "rating": "Đánh Giá"
+  },
+  "authentication": {
+    "intro-title": "Mang Đến Cho Bạn Một Phong Cách Mới Với Titan",
+    "login": "Đăng Nhập",
+    "sign-up": "Đăng Ký",
+    "password": "Mật Khẩu",
+    "forgot-password": "Quên Mật Khẩu",
+    "no-account": "Chưa Có Tài Khoản?",
+    "username": "Tên Đăng Nhập",
+    "confirm-password": "Xác Nhận Mật Khẩu",
+    "create-account": "TẠO TÀI KHOẢN",
+    "sign-in-upper": "ĐĂNG NHẬP",
+    "has-account": "Đã Có Tài Khoản?",
+    "sign-in": "Đăng Nhập",
+    "en": "EN",
+    "vi": "VI"
   }
 }
