task logic favorite

--- a/locales/en.json
+++ b/locales/en.json
@@ -3,7 +3,9 @@
     "home": "Home",
     "categories": "Categories",
     "cart": "Cart",
-    "profile": "Profile"
+    "profile": "Profile",
+    "payment": "Payment",
+    "favorite": "Favorite"
   },
   "profile": {
     "change-language": "English -> Tiếng Việt",
@@ -19,7 +21,8 @@
     "current-password": "Current Password",
     "new-password": "New Password",
     "retype-new-password": "Retype New Password",
-    "order-title": "Order"
+    "order-title": "Order",
+    "favorite": "Favorite"
   },
   "item_detail": {
     "buynow_button": "BUY NOW",
@@ -42,15 +45,22 @@
     "confirm": "Confirm",
     "no": "No",
     "yes": "Yes",
-    "clear-cart": "Are you sure you want to clear all items in the cart?"
+    "clear-cart": "Are you sure you want to clear all items in the cart?",
+    "clear-favorites": "Are you sure you want to clear all items in the favorite?"
   },
   "cart": {
     "clear-cart": "Clear Cart",
-    "cart-empty-message": "Your cart is empty. Start shopping!"
+    "cart-empty-message": "Your cart is empty. Start shopping!",
+    "subtotal": "Subtotal",
+    "shipping": "Shipping",
+    "vat": "VAT (8%)",
+    "total": "Total",
+    "proceedToCheckout": "Proceed to Checkout"
   },
   "button": {
     "confirm": "Confirm",
-    "reset-filter": "Reset filter"
+    "reset-filter": "Reset filter",
+    "back-to-home": "Back to home"
   },
   "search": {
     "search-placeholder": "Search item, product,..."
@@ -71,7 +81,8 @@
     "filter": "Filters",
     "brand": "Brand",
     "price": "Price",
-    "rating": "Rating"
+    "rating": "Rating",
+    "empty-message": "Product not found!"
   },
   "authentication": {
     "intro-title": "Bring yourself a new style with Titan",
@@ -88,5 +99,59 @@
     "sign-in": "Sign In",
     "en": "EN",
     "vi": "VI"
+  },
+  "payment": {
+    "title": "Payment",
+    "shippingInfo": "Shipping Information",
+    "fullName": "Full Name",
+    "phoneNumber": "Phone Number",
+    "shippingAddress": "Shipping Address",
+    "paymentMethod": "Payment Method",
+    "cod": "Cash on Delivery (COD)",
+    "creditCard": "Credit Card",
+    "creditDetails": "Credit Card Details",
+    "cardNumber": "Card Number",
+    "nameOnCard": "Name on Card",
+    "expiryDate": "MM/YY",
+    "cvv": "CVV",
+    "orderSummary": "Order Summary",
+    "subtotal": "Subtotal",
+    "shippingFee": "Shipping Fee",
+    "vat": "VAT (8%)",
+    "total": "Total",
+    "placeOrder": "Place Order",
+    "optional": "optional",
+    "validation_error": {
+      "title": "Error",
+      "message": "Please fill in all required fields"
+    },
+    "card_error": {
+      "invalid_number": {
+        "title": "Error",
+        "message": "The card number must be 14 characters long."
+      },
+      "invalid_expiry_date": {
+        "title": "Error",
+        "message": "Invalid expiry date"
+      },
+      "invalid_cvv": {
+        "title": "Error",
+        "message": "Invalid CVV"
+      }
+    },
+    "success": {
+      "title": "Order Placed",
+      "message": "Your order has been successfully placed!"
+    },
+    "failure": {
+      "title": "Error",
+      "message": "Failed to place order. Please try again."
+    }
+  },
+  "favorites": {
+    "clear-favorites": "Remove all",
+    "add-to-cart": "Add to cart",
+    "remove-from-cart": "Remove from cart",
+    "favorite-empty-message": "Your favorite list is empty. Start adding products!"
   }
 }
